Fix preformatted text overflow on small screen
Should fixes #13

--- a/assets/css/template.css
+++ b/assets/css/template.css
@@ -214,6 +214,7 @@ pre > code {
   background: #2b303b;
   color: #c0c5ce;
   font-family: 'Fira Mono', monospace;
+  overflow-wrap: break-word;
 }
 
 /* #Tables
